--- a/_include/hu/install-solaris-host-utilities-80.adoc
+++ b/_include/hu/install-solaris-host-utilities-80.adoc
@@ -4,4 +4,4 @@ NetApp strongly recommends installing the Solaris Host Utilities to support ONTA
 
 link:hu_solaris_80.html[Install Solaris Host Utilities 8.0]. 
 
-NOTE: Installing the Solaris Host Utilities doesn't change any host timeout settings on your Solaris host.
+NOTE: Installing the Solaris Host Utilities changes some of the timeout settings on your Solaris host.
