--- a/_include/hu/solaris-enable-san-boot.adoc
+++ b/_include/hu/solaris-enable-san-boot.adoc
@@ -1,15 +1,8 @@
 == Step 1: Optionally, enable SAN booting
-
-A solaris host can support using a local boot or a SAN boot. NetApp recommends using a SAN boot if it is supported by your configuration. 
-
+You can configure your host to use SAN booting to simplify deployment and improve scalability. If your configuration doesn't support SAN booting, you can use a local boot.
 
 [role="tabbed-block"]
 ====
-.Local boot
---
-Perform a local boot by installing the Solaris OS on the local hard disk, for example, an SSD, SATA, or RAID.
---
-
 .SAN boot
 --
 SAN booting is the process of setting up a SAN-attached disk (a LUN) as a boot device for a Solaris host. You can set up a SAN boot LUN to work in a Solaris MPxIO environment that is using the FC protocol and running Solaris Host Utilities. The method you use to set up a SAN boot LUN depends on your volume manager and file system.
@@ -27,4 +20,10 @@ See link:https://docs.netapp.com/us-en/ontap/san-management/index.html[SAN stora
 For information on how to enable the HBA BIOS, see your vendor-specific documentation.
 . Verify that the configuration was successful by rebooting the host and verifying that the OS is up and running.
 --
+
+.Local boot
+--
+Perform a local boot by installing the Solaris OS on the local hard disk, for example, an SSD, SATA, or RAID.
+--
+
 ====
