Edit Solaris HU 8.0

--- a/hu-solaris-114.adoc
+++ b/hu-solaris-114.adoc
@@ -19,7 +19,7 @@ include::_include/hu/solaris-enable-san-boot.adoc[]
 
 include::_include/hu/solaris-install-host-utilities.adoc[]
 
-link:hu_solaris_80.html[Install Solaris Host Utilities 8.0]. 
+link:hu-solaris-80.html[Install Solaris Host Utilities 8.0]. 
 
 
 == Step 3: Confirm the multipath configuration for your host
