Solaris command reference content improvements

--- a/hu-solaris-80-cmd.adoc
+++ b/hu-solaris-80-cmd.adoc
@@ -1,10 +1,10 @@
 ---
 sidebar: sidebar
-permalink: hu_solaris_80_cmd.html
+permalink: hu-solaris-80-cmd.html
 keywords: host utilities, unified, solaris, 8.0, netapp, ontap
 summary: Describes how to use the Solaris Host Utilities 8.0 with ONTAP
 ---
-= Solaris Host Utilities 8.0 command reference 
+= Use the Solaris Host Utilities 8.0 command reference with ONTAP storage 
 :hardbreaks:
 :toclevels: 1
 :nofooter:
