--- a/_include/hu/solaris-whats-next.adoc
+++ b/_include/hu/solaris-whats-next.adoc
@@ -1,3 +1,3 @@
 == What's next?
 
-link:hu_solaris_80_cmd.html[Learn about using the Solaris Host Utilities tool].
+link:hu-solaris-80-cmd.html[Learn about using the Solaris Host Utilities tool].
