Fix windows sidebar in project.yml

--- a/hu-solaris-80.adoc
+++ b/hu-solaris-80.adoc
@@ -13,7 +13,7 @@ summary: Describes how to use the Solaris Host Utilities 8.0 with ONTAP
 :imagesdir: ./media/
 
 [.lead]
-The Solaris Host Utilities assist you in managing ONTAP storage attached to a Solaris host. The Solaris Host Utilities supports several Solaris environments and multiple transport protocols. 
+The Solaris Host Utilities assist you in managing ONTAP storage attached to a Solaris host. The Solaris Host Utilities support several Solaris environments and multiple transport protocols. 
 
 These are the primary Solaris Host Utilities environments: 
 
