--- a/hu-solaris-114.adoc
+++ b/hu-solaris-114.adoc
@@ -54,7 +54,7 @@ To ensure that multipathing and the recommended timeout parameters are configure
 |===
 ====
 +
-For additional information about Solaris 11.4, see Oracle DOC ID: 2595926.1.
+For additional information about Solaris 11.4 system settings, see Oracle Support DOC ID: 2595926.1.
 include::_include/hu/solaris-recommended-settings-mcc-virtualization-snapmirror.adoc[]
 
 include::_include/hu/solaris-verify-settings-and-path-status.adoc[]
