--- a/_include/hu/solaris-verify-settings-and-path-status.adoc
+++ b/_include/hu/solaris-verify-settings-and-path-status.adoc
@@ -1,6 +1,8 @@
 . Verify that 4KB aligned I/O with zpools using ONTAP LUNs is supported:
 
-.. Verify that you Solaris host is installed with the latest Support Repository Update (SRU).
+.. Verify that you Solaris host is installed with the latest Support Repository Update (SRU):
++
+`# pkg info entire`
 
 .. Verify that the ONTAP LUN has `ostype` as "Solaris", independent of the LUN size:
 +
