--- a/hu_rhel_76.adoc
+++ b/hu_rhel_76.adoc
@@ -4,8 +4,7 @@ permalink: hu_rhel_76.html
 keywords: host utilities, red hat, rhel, linux, 7.6, netapp, ontap
 summary: Describes how to use Red Hat Enterprise Linux 7.6 with ONTAP
 ---
-
-= Use Red Hat Enterprise Linux 7.6 with ONTAP
+= Configure RHEL 7.6 for FCP and iSCSI with ONTAP storage
 :hardbreaks:
 :toclevels: 1
 :nofooter:
@@ -14,113 +13,27 @@ summary: Describes how to use Red Hat Enterprise Linux 7.6 with ONTAP
 :imagesdir: ./media/
 
 [.lead]
-You can use the ONTAP SAN host configuration settings to configure Red Hat Enterprise Linux 7.6 with ONTAP as the target. 
+The Linux Host Utilities software provides management and diagnostic tools for Linux hosts that are connected to ONTAP storage. When you install the Linux Host Utilities on a Red Hat Enterprise Linux (RHEL) 7.6 host, you can use the Host Utilities to help you manage FCP and iSCSI protocol operations with ONTAP LUNs.
 
-== Install the Linux Host Utilities
+include::_include/hu/rhel-configure-kvm-note.adoc[]
 
-include::_include/hu/reuse_hu_installing_luhu_with32.adoc[]
+include::_include/hu/linux-enable-san-boot.adoc[]
 
-include::_include/hu/reuse_hu_cloud_note.adoc[]
+include::_include/hu/install-linux-host-utilities.adoc[]
 
-== SAN Toolkit
+== Step 2: Confirm the multipath configuration for your host
 
-include::_include/hu/reuse_hu_san_toolkit.adoc[]
+You can use multipathing with RHEL 7.6 to manage ONTAP LUNs.
 
-== SAN Booting
+include::_include/hu/rhel-multipathing.adoc[]
 
-.Before you begin
-If you decide to use SAN booting, it must be supported by your configuration. You can use the link:https://imt.netapp.com/matrix/#welcome[Interoperability Matrix Tool^] to verify that your OS, HBA, HBA firmware and the HBA boot BIOS, and ONTAP version are supported.
+include::_include/hu/exclude-device.adoc[]
 
-include::_include/hu/reuse_hu_multipathing.adoc[]
+include::_include/hu/linux-rhel-customize-parameters.adoc[]
 
-include::_include/hu/reuse_hu_asa_configuration.adoc[]
+== Step 6: Review the known issues
 
-----
-# multipath -ll
-3600a09803831347657244e527766394e dm-5 NETAPP,LUN C-Mode
-size=80G  features='4 queue_if_no_path pg_init_retries 50 retain_attached_hw_handle' hwhandler='1 alua' wp=rw
-`-+- policy='service-time 0' prio=50 status=active
-  |- 11:0:7:1    sdfi   130:64   active ready running
-  |- 11:0:9:1    sdiy  8:288     active ready running
-  |- 11:0:10:1  sdml 69:464   active ready running
-  |- 11:0:11:1  sdpt  131:304  active ready running
-----
-
-include::_include/hu/reuse_hu_asa_configuration_note.adoc[]
-
-include::_include/hu/reuse_hu_non_asa_configuration.adoc[]
-
-----
-# multipath -ll
-3600a09803831347657244e527766394e dm-5 NETAPP,LUN C-Mode
-size=80G features='4 queue_if_no_path pg_init_retries 50 retain_attached_hw_handle’ hwhandler='1 alua' wp=rw
-|-+- policy='service-time 0' prio=50 status=active
-| |- 11:0:1:0 sdj  8:144  active ready running
-| |- 11:0:2:0 sdr  65:16  active ready running
-`-+- policy='service-time 0' prio=10 status=enabled
-  |- 11:0:0:0 sdb  8:i6   active ready running
-  |- 12:0:0:0 sdz  65:144 active ready running
-----
-
-include::_include/hu/reuse_hu_asa_configuration_note.adoc[]
-
-== Recommended Settings
-
-The RHEL 7.6 OS is compiled to recognize ONTAP LUNs and automatically set all configuration parameters correctly for both ASA and non-ASA configuration.
-
-include::_include/hu/reuse_hu_recommended_settings.adoc[]
-
-[cols=2*,options="header"]
-|===
-| Parameter
-| Setting
-| detect_prio | yes
-| dev_loss_tmo | "infinity"
-| failback | immediate
-| fast_io_fail_tmo | 5
-| features | "3 queue_if_no_path pg_init_retries 50"
-| flush_on_last_del | "yes"
-| hardware_handler | "0"
-| no_path_retry | queue
-| path_checker | "tur"
-| path_grouping_policy | "group_by_prio"
-| path_selector | "service-time 0"
-| polling_interval | 5
-| prio | "ontap"
-| product | LUN.*
-| retain_attached_hw_handler | yes
-| rr_weight | "uniform"
-| user_friendly_names | no
-| vendor | NETAPP
-|===
-
-.Example
-
-The following example shows how to correct an overridden default. In this case, the `multipath.conf` file defines values for `path_checker` and `no_path_retry` that are not compatible with ONTAP LUNs. If they cannot be removed because of other SAN arrays still attached to the host, these parameters can be corrected specifically for ONTAP LUNs with a device stanza.
-
-----
-defaults {
-   path_checker      readsector0
-   no_path_retry      fail
-}
-
-devices {
-   device {
-      vendor         "NETAPP  "
-      product         "LUN.*"
-      no_path_retry     queue
-      path_checker      tur
-   }
-}
-----
-
-include::_include/hu/reuse_hu_kvm_configuration.adoc[]
-
-include::_include/hu/hu-asm-mirroring.adoc[]
-
-== Known issues
-
-The RHEL 7.6 with ONTAP release has the following known issues:
+The RHEL 7.6 with ONTAP storage release has the following known issues:
 
 [cols=3*,options="header"]
 |===
@@ -131,5 +44,11 @@ The RHEL 7.6 with ONTAP release has the following known issues:
 | link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=1186754[1186754^] | Remote ports status on RHEL7U6 with QLogic QLE2742 host might be in blocked during host discovery | During host discovery, FC remote port status on RHEL7U6 host with a QLogic QLE2742 adapter might enter a blocked state. These blocked remote ports might result in the paths to LUNs becoming unavailable. During storage failover, the path redundancy might be reduced and result in I/O outage. You can check the remote port status by entering the following command:# cat /sys/class/fc_remote_ports/rport-*/port_state 
 | link:https://mysupport.netapp.com/NOW/cgi-bin/bol?Type=Detail&Display=1190698[1190698^] | Remote port status on RHEL7U6 with QLogic QLE2672 host might be in blocked during storage failover operations | FC remote ports might be blocked on Red Hat Enterprise Linux (RHEL) 7U6 with the QLogic QLE2672 host during storage failover operations. Because the logical interfaces go down when a storage node is down, the remote ports set the storage node status to blocked. When the storage node returns to its optimal state, the logical interfaces also come up and the remote ports should be online. However, the remote portsmight still be blocked. This blocked state registers as failed faulty to LUNS at the multipath layer. You can verify the remote ports state with the following command:# cat /sys/class/fc_remote_ports/rport-*/port_state 
 |===
+
+== What's next?
+
+include::_include/hu/use-linux-host-utilities.adoc[]
+
+include::_include/hu/asm-mirroring.adoc[]
 
 // 2024 SEP 2, ONTAPDOC-2345
