--- a/_include/nvme/nvme-configure.adoc
+++ b/_include/nvme/nvme-configure.adoc
@@ -1,5 +1,7 @@
 You can configure NVMe/FC with Broadcom/Emulex FC or Marvell/Qlogic FC adapters. 
 
+In addition, you need to manually discover the NVMe/TCP subsystems and namespaces.   
+
 [role="tabbed-block"]
 ====
 .FC - Broadcom/Emulex
@@ -134,7 +136,7 @@ cat /sys/module/qla2xxx/parameters/ql2xnvmeenable
 The expected output is 1.
 --
 
-.TCP
+.Connect NVMe/TCP
 --
 The NVMe/TCP protocol doesn't support the auto-connect operation. Instead, you can discover the NVMe/TCP subsystems and namespaces by performing the NVMe/TCP connect or connect-all operations manually.
 
