--- a/hu-rockylinux-810.adoc
+++ b/hu-rockylinux-810.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: hu-rl-810.html
+permalink: hu-rockylinux-810.html
 keywords: host utilities, rocky, linux, 8.10, netapp, ontap, fcp, iscsi
 summary: Install the Linux Host Utilities on a Rocky Linux 8.10 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
