--- a/hu-rockylinux-88.adoc
+++ b/hu-rockylinux-88.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: hu-rl-88.html
+permalink: hu-rockylinux-88.html
 keywords: host utilities, rocky, linux, 8.8, netapp, ontap, fcp, iscsi
 summary: Install the Linux Host Utilities on a Rocky Linux 8.8 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
