--- a/hu-rockylinux-91.adoc
+++ b/hu-rockylinux-91.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: hu-rl-91.html
+permalink: hu-rockylinux-91.html
 keywords: host utilities, rocky, linux, 9.1, netapp, ontap, fcp, iscsi
 summary: Install the Linux Host Utilities on a Rocky Linux 9.1 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
