--- a/hu-rockylinux-93.adoc
+++ b/hu-rockylinux-93.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: hu-rl-93.html
+permalink: hu-rockylinux-93.html
 keywords: host utilities, rocky, linux, 9.3, netapp, ontap, fcp, iscsi
 summary: Install the Linux Host Utilities on a Rocky Linux 9.3 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
