--- a/nvme-rockylinux-89.adoc
+++ b/nvme-rockylinux-89.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: nvme_rockylinux_89.html
+permalink: nvme-rockylinux-89.html
 keywords: nvme, linux, rocky linux, enterprise
 summary: How to Configure NVMe-oF Host for Rocky Linux 8.9 with ONTAP
 ---
