--- a/nvme-rockylinux-90.adoc
+++ b/nvme-rockylinux-90.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: nvme_rockylinux_90.html
+permalink: nvme-rockylinux-90.html
 keywords: nvme, linux, rocky linux, enterprise
 summary: How to Configure NVMe-oF Host for Rocky Linux 9.0 with ONTAP
 ---
