--- a/hu-rockylinux-90.adoc
+++ b/hu-rockylinux-90.adoc
@@ -1,10 +1,10 @@
 ---
 sidebar: sidebar
-permalink: hu-rl-84.html
-keywords: host utilities, rocky, linux, 8.4, netapp, ontap, fcp, iscsi
-summary: Install the Linux Host Utilities on a Rocky Linux 8.4 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
+permalink: hu-rockylinux-90.html
+keywords: host utilities, rocky, linux, 9.0, netapp, ontap, fcp, iscsi
+summary: Install the Linux Host Utilities on a Rocky Linux 9.0 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
-= Configure Rocky Linux 8.4 for FCP and iSCSI with ONTAP storage
+= Configure Rocky Linux 9.0 for FCP and iSCSI with ONTAP storage
 :hardbreaks:
 :toclevels: 1
 :nofooter:
@@ -13,7 +13,7 @@ summary: Install the Linux Host Utilities on a Rocky Linux 8.4 host to manage FC
 :imagesdir: ./media/
 
 [.lead]
-The Linux Host Utilities software provides management and diagnostic tools for Linux hosts that are connected to ONTAP storage. When you install the Linux Host Utilities on a Rocky Linux 8.4 host, you can use the Host Utilities to help you manage FCP and iSCSI protocol operations with ONTAP LUNs.
+The Linux Host Utilities software provides management and diagnostic tools for Linux hosts that are connected to ONTAP storage. When you install the Linux Host Utilities on a Rocky Linux 9.0 host, you can use the Host Utilities to help you manage FCP and iSCSI protocol operations with ONTAP LUNs.
 
 include::_include/hu/rhel-configure-kvm-note.adoc[]
 
@@ -23,7 +23,7 @@ include::_include/hu/install-linux-host-utilities.adoc[]
 
 == Step 3: Confirm the multipath configuration for your host
 
-You can use multipathing with Rocky Linux 8.4 to manage ONTAP LUNs.
+You can use multipathing with Rocky Linux 9.0 to manage ONTAP LUNs.
 
 include::_include/hu/rhel-multipathing.adoc[]
 
