--- a/hu-rockylinux-92.adoc
+++ b/hu-rockylinux-92.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: hu-rl-92.html
+permalink: hu-rockylinux-92.html
 keywords: host utilities, rocky, linux, 9.2, netapp, ontap, fcp, iscsi
 summary: Install the Linux Host Utilities on a Rocky Linux 9.2 host to manage FCP and iSCSI protocol operations with ONTAP LUNs.
 ---
