--- a/nvme-rockylinux-810.adoc
+++ b/nvme-rockylinux-810.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: nvme_rockylinux_810.html
+permalink: nvme-rockylinux-810.html
 keywords: nvme, linux, rocky linux, enterprise
 summary: How to Configure NVMe-oF Host for Rocky Linux 8.10 with ONTAP
 ---
