--- a/nvme-rockylinux-86.adoc
+++ b/nvme-rockylinux-86.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: nvme_rockylinux_86.html
+permalink: nvme-rockylinux-86.html
 keywords: nvme, linux, rocky linux, enterprise
 summary: How to Configure NVMe-oF Host for Rocky Linux 8.6 with ONTAP
 ---
