--- a/nvme-rockylinux-87.adoc
+++ b/nvme-rockylinux-87.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: nvme_rockylinux_87.html
+permalink: nvme-rockylinux-87.html
 keywords: nvme, linux, rocky linux, enterprise
 summary: How to Configure NVMe-oF Host for Rocky Linux 8.7 with ONTAP
 ---
