--- a/nvme-rockylinux-88.adoc
+++ b/nvme-rockylinux-88.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: nvme_rockylinux_88.html
+permalink: nvme-rockylinux-88.html
 keywords: nvme, linux, rocky linux, enterprise
 summary: How to Configure NVMe-oF Host for Rocky Linux 8.8 with ONTAP
 ---
