--- a/nvme-rockylinux-91.adoc
+++ b/nvme-rockylinux-91.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: nvme_rockylinux_91.html
+permalink: nvme-rockylinux-91.html
 keywords: nvme, linux, rocky linux, enterprise
 summary: How to Configure NVMe-oF Host for Rocky Linux 9.1 with ONTAP
 ---
