--- a/nvme-rockylinux-94.adoc
+++ b/nvme-rockylinux-94.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: nvme_rockylinux_94.html
+permalink: nvme-rockylinux-94.html
 keywords: nvme, linux, rocky linux, enterprise
 summary: How to Configure NVMe-oF Host for Rocky Linux 9.4 with ONTAP
 ---
