--- a/nvme-rockylinux-95.adoc
+++ b/nvme-rockylinux-95.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: nvme_rockylinux_95.html
+permalink: nvme-rockylinux-95.html
 keywords: nvme, linux, rocky linux, enterprise
 summary: How to Configure NVMe-oF Host for Rocky Linux 9.5 with ONTAP
 ---
