--- a/_include/nvme/nvme-configure.adoc
+++ b/_include/nvme/nvme-configure.adoc
@@ -1,6 +1,4 @@
-You can configure NVMe/FC with Broadcom/Emulex FC or Marvell/Qlogic FC adapters. 
-
-In addition, you need to manually discover the NVMe/TCP subsystems and namespaces.   
+You can configure NVMe/FC with Broadcom/Emulex FC or Marvell/Qlogic FC adapters. You also need to manually discover the NVMe/TCP subsystems and namespaces.   
 
 [role="tabbed-block"]
 ====
